<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.facefive.meetbook.activities.LoginActivity">


    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="21dp"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="13"
        android:textColor="@color/colorText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/passET"
        android:layout_centerHorizontal="true"
        android:layout_alignEnd="@+id/passET"
        android:layout_marginTop="20dp"
        android:text="@string/loginBLabel"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_btn"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_marginBottom="50dp"
        android:text="@string/emailLabel"
        android:textColor="@color/colorText"
        android:labelFor="@+id/et_email"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passET"
        android:layout_alignStart="@+id/passET"
        android:labelFor="@+id/passET"
        android:text="@string/passLabel"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/forgotPassLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_alignStart="@+id/passET"
        android:layout_alignTop="@+id/btn_login"
        android:text="@string/forget_password"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/forgotPassLink"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="11dp"
        android:text="Don't have an account?"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/sign_up_link"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />


</RelativeLayout>
